[package]
name = "multi-thread-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "multi_thread_rust"
path = "src/lib.rs"

[[bin]]
name = "multi-thread-rust"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
num_cpus = "1.16"
colored = "2.1"
